# kos-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  resource.cgures
include/kos_engine/: defs.hpp  game.h  game_factory.h  input_handler.h  utils.hpp
include/kos_engine/component/: animation_sprite.h  camera.h  component.h  sprite.h  text.h  texture_container.h  visual_component.h
include/kos_engine/component/shape/: shape_circle.h  shape_rect.h
include/kos_engine/interface/: icircle.h  irect.h  irect_boarder.h  rect_boarder.h  rect_shape.h
include/kos_engine/math/: matrix.hpp  vector.hpp
src/: main.cpp
src/component/: CMakeLists.txt  animation_sprite.cpp  camera.cpp  component.cpp  sprite.cpp  text.cpp  texture_container.cpp  visual_component.cpp
src/component/shape/: CMakeLists.txt  shape_circle.cpp  shape_rect.cpp
src/game/: CMakeLists.txt  game.cpp  game_factory.cpp
src/input_handler/: CMakeLists.txt  input_handler.cpp
src/interface/: CMakeLists.txt
src/math/: CMakeLists.txt  matrix.cpp
src/test/: CMakeLists.txt  test_main.cpp
src/test/unit_test/: CMakeLists.txt  unit_test.cpp  unit_test.h
src/test/unit_test/unit_test_math/: CMakeLists.txt  test_math.cpp
src/test/unit_test/unit_test_shape/: CMakeLists.txt  test_shape.cpp
